--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,17 @@ body {
   margin-right: 5px;
   width: 10px;
 }
+
+.info-box {
+
+  background-color: #66ffcc;
+  border-radius: 3px;
+  bottom: 30px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  padding: 10px;
+  position: absolute;
+  left: 10px;
+  z-index: 1;
+
+}
