--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,15 @@ body {
   z-index: 1;
 
 }
+
+.info-box h4 {
+  margin: 0 0 10px;
+}
+
+.info-box div span {
+  border-radius: 50%;
+  display: inline-block;
+  height: 10px;
+  margin-right: 5px;
+  width: 10px;
+}
