--- a/css/styles.css
+++ b/css/styles.css
@@ -35,25 +35,20 @@ body {
   width: 10px;
 }
 
-.info-box {
 
+.info {
   background-color: #66ffcc;
   border-radius: 3px;
   bottom: 30px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
   padding: 10px;
-  position: absolute;
+  position: relative;
   left: 10px;
   z-index: 1;
-
 }
 
-.info-box h4 {
-  margin: 0 0 10px;
-}
-
-.info-box div span {
+.info div span {
   border-radius: 50%;
   display: inline-block;
   height: 10px;
