--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
   padding: 10px;
-  position: relative;
+  position: absolute;
   left: 10px;
   z-index: 1;
 }
